Refactor index.html for improved structure and styling
Updated the index.html file by removing inline styles and adding a link to an external stylesheet. Enhanced the content structure and added new sections for better presentation.

--- a/.github/index.html
+++ b/.github/index.html
@@ -1,77 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
   <title>Collin Quirke | Engineering Portfolio</title>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-      margin: 0;
-    }
-
-    header {
-      background: #020617;
-      padding: 20px;
-      text-align: center;
-      border-bottom: 1px solid #1e293b;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.2rem;
-    }
-
-    nav {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      background: #020617;
-      padding: 10px;
-      border-bottom: 1px solid #1e293b;
-    }
-
-    nav a {
-      color: #93c5fd;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      color: #60a5fa;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 30px;
-    }
-
-    .project {
-      background: #020617;
-      border-radius: 8px;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-left: 4px solid #3b82f6;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      color: #94a3b8;
-      border-top: 1px solid #1e293b;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-<header>
-  <h1>Collin Quirke</h1>
-  <p>Engineering Portfolio</p>
-</header>
 
 <nav>
   <a href="index.html">Home</a>
@@ -80,37 +13,25 @@
   <a href="contact.html">Contact</a>
 </nav>
 
-<div class="container">
-  <h2>About Me</h2>
-  <p>
-    I am an engineering student with experience in UAV design, CAD modeling,
-    electronics integration, and flight testing. This portfolio highlights
-    my senior-year UAV Design Challenge project and other technical work.
-  </p>
+<div class="hero">
+  <div>
+    <h1>Collin Quirke</h1>
+    <p>Engineering Portfolio – UAV, Rocketry, and Propulsion Systems</p>
 
-  <h2>Featured Project</h2>
-
-  <div class="project">
-    <h3>UAV Design Challenge (2024)</h3>
-    <p>
-      Designed and built a competition UAV capable of mission-based flight,
-      payload delivery, and precision control.
-    </p>
-
-    <ul>
-      <li>3D CAD Design (Fusion 360)</li>
-      <li>Electronics & wiring integration</li>
-      <li>Flight testing and tuning</li>
-    </ul>
-
-    <a href="docs/Nationals_Report.pdf" style="color:#60a5fa;">View Report</a>
+    <div class="buttons">
+      <a href="projects.html">View Projects</a>
+      <a href="resume.html">Resume</a>
+    </div>
   </div>
-
 </div>
 
-<footer>
-  © 2024 Collin Quirke
-</footer>
+<div class="section">
+  <h2>About Me</h2>
+  <p>
+    Engineering student with experience in UAV design, solid rocket motor development,
+    CAD modeling, electronics integration, and propulsion analysis.
+  </p>
+</div>
 
 </body>
 </html>
