Create resume.html with navigation and PDF link
Added complete HTML structure for the resume page.

--- a/.github/resume.html
+++ b/.github/resume.html
@@ -1,2 +1,23 @@
-<h1>Resume</h1>
-<p>Coming soon — PDF version will be uploaded.</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Resume | Collin Quirke</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="projects.html">Projects</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="section">
+  <h1>Resume</h1>
+  <p>Download my resume:</p>
+  <a href="assets/Collin_Quirke_Resume.pdf">Download PDF</a>
+</div>
+
+</body>
+</html>
