Update GitHub link in contact.html

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <h1>Contact</h1>
   <p>Email: cjquirke@liberty.edu</p>
   <p>Phone: (540) 877-5366</p>
-  <p>GitHub: github.com/quirke</p>
+  <p>GitHub: github.com/cquirke</p>
   <p>LinkedIn: www.linkedin.com/in/quirke-collin</p>
 </div>
 
