--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Collin Quirke | Engineering Portfolio</title>
+  <meta charset="UTF-8" />
+  <title>Collin Quirke | Aerospace Engineering Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <nav>
@@ -16,7 +18,7 @@
 <div class="hero">
   <div>
     <h1>Collin Quirke</h1>
-    <p>Engineering Portfolio – Propulsion Systems, Advanced Competitions, Experimental Design</p>
+    <p>Mechanical Engineering Student | Aerospace & Propulsion Focus</p>
 
     <div class="buttons">
       <a href="projects.html">View Projects</a>
@@ -26,23 +28,80 @@
 </div>
 
 <div class="section">
+
   <h2>About Me</h2>
+
   <p>
-       I'm Collin, a Mechanical Engineering student at Liberty University. I specialize in mechanical design for aerospace and mechanized systems.
-<br>   As someone who is highly interested in Engineering I also like to have some hobbies. Some of these hobbies include hiking, camping, and running. I am a very active person having done some pretty cool backpacking trips and I've trained for marathons as well. 
-<br>
+    I’m Collin, a Mechanical Engineering student at Liberty University with a strong focus on mechanical
+    design, structural analysis, and propulsion systems. My academic and project experience centers on
+    aerospace and high-performance mechanical systems, particularly solid rocket motors, UAV platforms,
+    and propulsion-related hardware.
+  </p>
+
+  <p>
+    Outside of engineering, I stay highly active and enjoy hiking, camping, and endurance training. I’ve
+    completed several backpacking trips and trained for long-distance races, which reflects my disciplined
+    mindset and long-term goal-oriented approach. I bring that same persistence and attention to detail
+    into my engineering work.
+  </p>
+
   <h2>Skills</h2>
-Technical Documentation - SolidWorks - MATLAB - Iterative Testing - Adobe - Leadership - Team Building - ANSYS - AutoCAD - OpenMotor - Manufacturing - Inventor - RPA - Microsoft Office
+
+  <p>
+    <strong>Engineering & Technical:</strong><br>
+    SolidWorks · ANSYS · AutoCAD · MATLAB · OpenMotor · Inventor · Manufacturing · Iterative Testing ·
+    Structural Analysis
+  </p>
+
+  <p>
+    <strong>Professional:</strong><br>
+    Technical Documentation · Leadership · Team Building · Project Planning · Adobe · Microsoft Office · RPA
+  </p>
 
   <h2>Engineering Interests</h2>
-       I am studying mechanical engineering but I have a deep interest in energetics including aerospace propulsion systems and high performance automotive propulsion. In the focus of my career I think I would fit best as a Mechanical Design Engineer in the Aerospace or Automotive industry.
-<br>   I seem to have backed this up with my involvment in my university's Rocketry Propulsion team and NASA internship. You can find more information within My Projects.
-<br>   I am always tinkering on something wether it be a specific engineering project or a personal project. I own an old 90's Volkswagen that I fix and tune myself and from this I have gained a lot of mechanical know-how.
+
+  <p>
+    While I am pursuing Mechanical Engineering, my primary interests lie in <strong>energetics and
+    propulsion systems</strong>, especially within aerospace applications.
+  </p>
+
+  <p>
+    My experience includes:
+  </p>
+
+  <ul>
+    <li>Solid rocket motor design and static fire testing</li>
+    <li>UAV structural and mission design</li>
+    <li>Rocket propulsion team involvement</li>
+    <li>NASA internship exposure</li>
+    <li>Mechanical fabrication and testing</li>
+  </ul>
+
+  <p>
+    I’m particularly interested in mechanical design roles where I can contribute to aerospace vehicles,
+    propulsion hardware, and advanced mechanical systems.
+  </p>
+
+  <p>
+    Outside of school projects, I’m always working on something hands-on — whether it’s a new engineering
+    concept, a personal fabrication project, or tuning and maintaining my 1990s Volkswagen. This has helped
+    me develop strong mechanical intuition and real-world problem-solving skills.
+  </p>
 
   <h2>Project Highlights</h2>
 
-  <h2>Media</h2>
+  <ul>
+    <li><strong>Prototype1_SRM</strong> – Solid Rocket Motor Design & Static Fire</li>
+    <li><strong>UAV Design Challenge 2024</strong> – Competition UAV System</li>
+    <li><strong>Tripoli L2 Certification</strong> – High-Power Rocket Construction</li>
+    <li><strong>CompRocket Boat Tail</strong> – Aerodynamic Component Design</li>
+    <li><strong>Propulsion Onboarding</strong> – Structured Engineering Resources</li>
+  </ul>
+
+  <p>
+    <em>View full project details in the Projects tab.</em>
   </p>
+
 </div>
 
 </body>
