--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 </div>
 
 
+  </div>
+</div>
+
+
   <p>
     Outside of engineering, I stay highly active and enjoy hiking, camping, and endurance training. I’ve
     completed several backpacking trips and trained for long-distance races, which reflects my disciplined
