--- a/media.html
+++ b/media.html
@@ -15,36 +15,30 @@
   <a href="resume.html">Resume</a>
   <a href="contact.html">Contact</a>
 </nav>
+<section class="media-gallery">
 
-<div class="section">
-
-  <h1>Project Media</h1>
-  <p>
-    A visual collage of aerospace and mechanical engineering projects,
-    including rocket launches, propulsion testing, UAV flights, and CAD designs.
-  </p>
-  
-<div class="collage-wrapper>
-  <div class="collage">
-
-    <div class="collage-item">
-      <img src="assets/media/Group_Image_24.jpg" alt="Rocket Launch">
-      <div class="overlay">
-        <h3>Team Photo with WayMaker</h3>
-        <p>This photo marks the kickstart of the 2024-2025 competition year with the whole team.</p>
-      </div>
+  <div class="media-item">
+    <img src="images/rocket1.jpg" alt="Rocket Launch">
+    <div class="overlay">
+      <h3>SRM Static Test</h3>
+      <p>Full-scale solid rocket motor ground test at Liberty University.</p>
     </div>
-
-    <div class="collage-item">
-  <img src="assets/media/newimage.jpg" alt="Description">
-  <div class="overlay">
-    <h3>Title</h3>
-    <p>Short description</p>
   </div>
 
+  <div class="media-item">
+    <img src="images/cad1.jpg" alt="CAD Model">
+    <div class="overlay">
+      <h3>Nozzle Design</h3>
+      <p>Axisymmetric nozzle optimized using MoC.</p>
+    </div>
   </div>
-</div>
-</div>
 
-</body>
-</html>
+  <div class="media-item">
+    <img src="images/lab.jpg" alt="Lab Work">
+    <div class="overlay">
+      <h3>Propellant Mixing</h3>
+      <p>Controlled mixing procedure following EHS protocol.</p>
+    </div>
+  </div>
+
+</section>
