--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
 
 <body>
 
-<nav class="main-nav>
-  <div class="nav-left">
-    <a href="https://cquirke.github.io/index.html">
-      <i class="fas fa-arrow-left"></i> Main Portfolio
-    </a>
-  </div>
-
   <div class="nav-center">
-    <a href="index.html" class="active">Project Home</a>
-    <a href="media.html">Project Media</a>
-    <a href="files.html">Project Files</a>
+    <a href="index.html" class="active">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="media.html">Media</a>
+    <a href="resume.html">Resume</a>
+    <a href="contact.html">Contact</a>
   </div>
 
   <div></div>
