--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
 
 <body>
 
-  <div class="nav-center">
-    <a href="index.html" class="active">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="media.html">Media</a>
-    <a href="resume.html">Resume</a>
-    <a href="contact.html">Contact</a>
-  </div>
-
-  <div></div>
+  <nav>
+  <a href="index.html" class="active">Home</a>
+  <a href="projects.html">Projects</a>
+  <a href="media.html">Media</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
 </nav>
 
 <div class="hero">
