--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@
       <li>Mission planning</li>
     </ul>
 
-    <a href="https://cquirke.github.io/UAV_Design_Challenge-2024/" target="_blank">View Project</a>
+    <a href="https://github.com/cquirke/UAV_Design_Challenge-2024" target="_blank">View Repository</a>
   </div>
 
   <!-- PROJECT CARD -->
