--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </ul>
 
   <p>
-    <em>View full project details in the Projects tab.</em>
+    <em>View all projects and details in the Projects tab.</em>
   </p>
 
 </div>
