--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 
   <!-- PROJECT CARD -->
   <div class="project-card">
-    <h2>Prototype1_SRM</h2>
+    <h2>V1.0 Solid Rocket Motor</h2>
     <p class="project-subtitle">Solid Rocket Motor Design & Static Fire Testing</p>
 
     <p>
@@ -41,6 +41,7 @@
       <li>Static fire testing and data evaluation</li>
       <li>Manufacturing and assembly</li>
     </ul>
+    <p>Fall 2025 - Current</p>
 
     <a href="https://github.com/cquirke/Prototype1_SRM" target="_blank">View Repository</a>
   </div>
@@ -48,10 +49,10 @@
    <!-- PROJECT CARD -->
   <div class="project-card">
     <h2>Propulsion Onboarding</h2>
-    <p class="project-subtitle">Engineering Training Materials</p>
+    <p class="project-subtitle">Engineering Training Course</p>
 
     <p>
-      Developed structured onboarding resources for new propulsion team members,
+      Developed structured onboarding course for new propulsion team members,
       covering rocket fundamentals, analysis tools, and safety procedures.
     </p>
 
@@ -60,6 +61,7 @@
       <li>Propulsion theory</li>
       <li>Team training structure</li>
     </ul>
+    <p>Spring 2026</p>
 
     <a href="https://github.com/cquirke/Propulsion_Onboarding" target="_blank">View Repository</a>
   </div>
@@ -76,37 +78,18 @@
 
     <ul>
       <li>Rocket structural design</li>
-      <li>Motor selection & integration</li>
+      <li>Manufacturing & integration</li>
       <li>Flight safety procedures</li>
       <li>Launch operations</li>
     </ul>
+    <p>Winter 2025 - Current</p>
 
     <a href="https://github.com/cquirke/Tripoli_Certification" target="_blank">View Repository</a>
   </div>
 
   <!-- PROJECT CARD -->
   <div class="project-card">
-    <h2>UAV Design Challenge 2024</h2>
-    <p class="project-subtitle">Competition UAV System</p>
-
-    <p>
-      Designed and built a mission-capable UAV for a national design competition,
-      focusing on payload delivery, structural optimization, and flight performance.
-    </p>
-
-    <ul>
-      <li>Mechanism CAD design</li>
-      <li>Electronics integration</li>
-      <li>Flight testing & tuning</li>
-      <li>Mission planning</li>
-    </ul>
-
-    <a href="https://github.com/cquirke/UAV_Design_Challenge-2024" target="_blank">View Repository</a>
-  </div>
-
-  <!-- PROJECT CARD -->
-  <div class="project-card">
-    <h2>CompRocket Boat Tail</h2>
+    <h2>Rocket Boat Tail</h2>
     <p class="project-subtitle">Aerodynamic Component Design</p>
 
     <p>
@@ -119,10 +102,49 @@
       <li>Aerodynamic considerations</li>
       <li>Manufacturing for competition use</li>
     </ul>
+    <p>Spring 2025</p>
 
     <a href="https://github.com/cquirke/CompRocket_Boat_Tail" target="_blank">View Repository</a>
   </div>
 
+<!-- PROJECT CARD -->
+  <div class="project-card">
+    <h2>Engineering Communications Final Project</h2>
+    <p class="project-subtitle">Presentation and Course Creation</p>
+
+    <p>
+      Built a new course concept and proposal for the Liberty University Engineering 
+      department. Presented this concept and introduced the proposal to the dean.
+    </p>
+
+    <ul>
+      <li>Technical communication</li>
+      <li>Curriculum & course design</li>
+      <li>Presentation & public speaking</li>
+    </ul>
+    <p>Spring 2025</p>
+
+    <a href="https://github.com/cquirke/Communications_ENGR-Final_Project" target="_blank">View Repository</a>
+  </div>
+  
+ <!-- PROJECT CARD -->
+  <div class="project-card">
+    <h2>Introduction to Engineering Final Project</h2>
+    <p class="project-subtitle">Construct Mousetrap Car</p>
+
+    <p>
+      Designed and built a mousetrap car to requirements. Required to follow
+      a specific course and present on our project
+    </p>
+
+    <ul>
+      <li>Technical Documentation</li>
+      <li>Upholding Schedule</li>
+    </ul>
+    <p>Fall 2024</p>
+    <a href="https://github.com/cquirke/Intro_to_ENGR-Final_Project" target="_blank">View Repository</a>
+  </div>
+  
   <!-- PROJECT CARD -->
   <div class="project-card">
     <h2>UAV Design Challenge 2024</h2>
@@ -139,8 +161,8 @@
       <li>Flight testing & tuning</li>
       <li>Mission planning</li>
     </ul>
-
-    <a href="https://cquirke.github.io/UAV_Design_Challenge-2024/" target="_blank">View Project</a>
+    <p>Fall 2023 - Spring 2024</p>
+    <a href="https://cquirke.github.io/UAV_Design_Challenge-2024/" target="_blank">View Repository</a>
   </div>
   
 </div>
