--- a/media.html
+++ b/media.html
@@ -42,10 +42,10 @@
   </div>
 
   <div class="media-item">
-    <img src="images/lab.jpg" alt="Lab Work">
+    <img src="assets/media/comp_launch_25" alt="25 Competition Launch">
     <div class="overlay">
-      <h3>Propellant Mixing</h3>
-      <p>Controlled mixing procedure following EHS protocol.</p>
+      <h3>2025 IREC Launch</h3>
+      <p>Launch from stand at IREC competiton.</p>
     </div>
   </div>
 
