--- a/media.html
+++ b/media.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="media-item">
-    <img src="assets/media/comp_launch_25" alt="25 Competition Launch">
+    <img src="assets/media/comp_launch_25.jpg" alt="25 Competition Launch">
     <div class="overlay">
       <h3>2025 IREC Launch</h3>
       <p>Launch from stand at IREC competiton.</p>
