--- a/media.html
+++ b/media.html
@@ -34,10 +34,10 @@
   </div>
 
   <div class="media-item">
-    <img src="images/cad1.jpg" alt="CAD Model">
+    <img src="assets/media/prelim_exp_srm.jpg" alt="CAD Model">
     <div class="overlay">
-      <h3>Nozzle Design</h3>
-      <p>Axisymmetric nozzle optimized using MoC.</p>
+      <h3>Preliminary Experimental SRM</h3>
+      <p>Preliminary experimental srm design based on mlx generator.</p>
     </div>
   </div>
 
@@ -46,6 +46,14 @@
     <div class="overlay">
       <h3>2025 IREC Launch</h3>
       <p>Launch from stand at IREC competiton.</p>
+    </div>
+  </div>
+
+  <div class="media-item">
+    <img src="assets/media/uav_cad_model.jpg" alt="CAD UAV">
+    <div class="overlay">
+      <h3>Complete UAV Model</h3>
+      <p>CAD model of UAV used at competition.</p>
     </div>
   </div>
 
