--- a/media.html
+++ b/media.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="media-item">
-    <img src="assets/media/prelim_exp_srm.jpg" alt="CAD Model">
+    <img src="assets/media/prelim_exp_srm.png" alt="CAD Model">
     <div class="overlay">
       <h3>Preliminary Experimental SRM</h3>
       <p>Preliminary experimental srm design based on mlx generator.</p>
@@ -50,7 +50,7 @@
   </div>
 
   <div class="media-item">
-    <img src="assets/media/uav_cad_model.jpg" alt="CAD UAV">
+    <img src="assets/media/uav_cad_model.png" alt="CAD UAV">
     <div class="overlay">
       <h3>Complete UAV Model</h3>
       <p>CAD model of UAV used at competition.</p>
