--- a/media.html
+++ b/media.html
@@ -57,6 +57,14 @@
     </div>
   </div>
 
+  <div class="media-item">
+    <img src="assets/media/mlx_engine_generator.jpg" alt="Pers mlx screenshot">
+    <div class="overlay">
+      <h3>Screenshot from MatLab Generator</h3>
+      <p>Personal file of SRM optimization and analysis engine generator.</p>
+    </div>
+  </div>
+
 </section>
 
 </div>
