--- a/media.html
+++ b/media.html
@@ -61,7 +61,15 @@
     <img src="assets/media/mlx_engine_generator.jpg" alt="Pers mlx screenshot">
     <div class="overlay">
       <h3>Screenshot from MatLab Generator</h3>
-      <p>Personal file of SRM optimization and analysis engine generator.</p>
+      <p>Personal file of solid rocket optimization, analysis, and engine generator.</p>
+    </div>
+  </div>
+
+  <div class="media-item">
+    <img src="assets/media/uav_comp_test.jpg" alt="Testing footage at nat">
+    <div class="overlay">
+      <h3>Testing from UAV Competition</h3>
+      <p>Test footage from national UAV competition.</p>
     </div>
   </div>
 
